@@ -1,3 +1,8 @@
+2007-05-24  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
+
+    * src/src_sinc.c
+    Change macros into inline functions for better error checking.
+
 2007-05-12  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * tests.Makefile.am
